[project]
name = "nl2sql-data-agent"
version = "0.1.0"
description = "NL2SQL Data Agent — Semantic Layer + Plan Mode + Human-in-the-loop"
authors = [{ name = "Data Agent Team" }]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0",
    "sqlglot>=25.0",
    "pandas>=2.0",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
nl2sql-agent = "nl2sql_agent.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
